created Departments controller with entity scaffold

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "SalesWebMVCContext": "Server=(localdb)\\mssqllocaldb;Database=SalesWebMVCContext-97c5777f-4a1d-41cc-ba87-b6264e2a4c2d;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
